// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideImage styles should render with custom aspect ratio 1`] = `
.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 50%;
  background: #F5F5F5;
}

<div
  class="circuit-2 circuit-3 circuit-4"
>
  <img
    alt="Aerial photo of turbulent blue ocean waves"
    class="circuit-0 circuit-1"
    src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
  />
</div>
`;

exports[`SlideImage styles should render with default styles 1`] = `
.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #F5F5F5;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

<div
  class="circuit-2 circuit-3 circuit-4"
>
  <img
    alt="Aerial photo of turbulent blue ocean waves"
    class="circuit-0 circuit-1"
    src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
  />
</div>
`;
